# flow_rust

./: .build.rs  Cargo.toml  buf.gen.yaml  buf.yaml  build.rs
cadence_json/: Cargo.toml
cadence_json/src/: de.rs  lib.rs  wrapper.rs
cadence_json/src/tests/: json.rs
exemples/: Cargo.toml
exemples/src/: main.rs
src/: lib.rs
src/flow/: mod.rs
src/flow/proto/: mod.rs
src/flow/proto/model/: flow.access.serde.rs  flow.access.tonic.rs  flow.entities.rs  flow.entities.serde.rs  flow.execution.rs
src/flow_rs/: client.rs  mod.rs
src/flow_rs/proto/: mod.rs
src/flow_rs/proto/model/: flow.access.rs  flow.execution.serde.rs  flow.execution.tonic.rs  mod.rs
