[package]
name = "flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flow"

[dependencies]
pbjson = "0.5.1"
pbjson-types = "0.5.1"
prost = "0.11.9"
serde = "1.0.185"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
cadence_json = { version = "0.1.2", path = "cadence_json/" }
p256 = "0.13.2"

ecdsa = "0.16.8"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
secp256k1 = "0.27.0"
futures-timer = "3.0.2"
rlp = "0.5.2"
glob = "0.3.1"

[build-dependencies]
glob = "0.3.1"
tonic-build = "0.9.2"
