[package]
name = "flow_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flow_rs"

[dependencies]
pbjson = "0.6.0"
pbjson-types = "0.6.0"
prost = "0.12.3"
serde = "1.0.196"
serde_json = "1.0.113"
tonic = "0.10.2"
cadence_json = { version = "0.1.2", path = "cadence_json/" }
futures-core = "0.3.30"

# p256 = "0.13.2"
# ecdsa = "0.16.8"
# hex = "0.4.3"
# tiny-keccak = { version = "2.0.2", features = ["sha3"] }
# secp256k1 = "0.27.0"
# futures-timer = "3.0.2"
# rlp = "0.5.2"

[build-dependencies]
glob = "0.3.1"
tonic-build = "0.10.2"
