[package]
name = "exemples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
cadence_json = { version = "0.1.2", path = "../cadence_json/" }
flow = { path = ".." }
